tests/NormalTests/paczka2/big_fuzzy/83491536.err
Error in line 9: N5UTosiXgR3 S691 52,8
Error in line 8: xjiQBHsh7 S24 60,5
Error in line 13: xjiQBHsh7 S812 25,89
Error in line 11: N5UTosiXgR3 A993 73,1
Error in line 15: S812 A993 90,0
Error in line 18: vEeJ S812 315,5
Error in line 16: S812 S24 95,9
Error in line 19: hmjOK0 S812 6,3
Error in line 12: xjiQBHsh7 S812 64,8
Error in line 36: qsFNLaL S691 -1,0
Error in line 43: hmjOK0 S24 12,96
Error in line 45: S812 A993 94,8
Error in line 49: hmjOK0 S24 28,76
Error in line 32: qsFNLaL S691 16,8
Error in line 63: S812 A993 4,W
Error in line 91: hmjOK0 S24 746,6
Error in line 84: S812 S812 46,7
Error in line 93: hmjOK0 S812 53,4
Error in line 99: vEeJ S24 109,7
Error in line 115: hmjOK0 S691 13,5
Error in line 125: vEeJ S691 8,4
Error in line 134: xjiQBHsh7 S691 84,2
Error in line 122: p4JWwiyQkzi A993 120,0
Error in line 149: qsFNLaL S812 38,1
Error in line 166: p4JWwiyQkzi S691 4,9
Error in line 150: hmjOK0 S812 45,2
Error in line 184: p4JWwiyQkzi A993 36,4
Error in line 196: vEeJ A993 50,79
Error in line 201: xjiQBHsh7 S691 41,8
Error in line 194: p4JWwiyQkzi S691 6,2
Error in line 217: N5UTosiXgR3 S24 69,1
Error in line 222: hmjOK0 A993 62,3
Error in line 226: vEeJ S24 39,01
Error in line 208: vEeJ A993 61,1
Error in line 235: S812 S691 85,2
Error in line 239: vEeJ A993 98,8
